--- a/main.tex
+++ b/main.tex
@@ -335,9 +335,9 @@ The action of this gate on the state $\ket{h}$ takes the form
 Next, the algorithm reflects the current state about the hyperplane that has $\ket{h}$ as a normal vector and negates the resulting state:
 \begin{align*}
 \Big(2\ket{h}\bra{h}-\I \Big) \left( \frac{1}{\sqrt{N}} \sum_{x=0}^{N-1} -1^{\delta_{x_0}(x)} \ket{x}  \right)
-&= \frac{1}{\sqrt{N}}\sum_{x} \left( (-1)^{1-\delta_{x_0}(x)} + 2 \frac{(N-1)}{N} \right)\ket{x}\\ &= \frac{(3N-2)}{N^{3/2}} \ket{x_0} + \sum_{x\neq x_0} \frac{(N-2)}{N^{3/2}}  \ket{x} \, .
+&= \frac{1}{\sqrt{N}}\sum_{x} \left( (-1)^{1-\delta_{x_0}(x)} + 2 \frac{(N-2)}{N} \right)\ket{x}\\ &= \frac{(3N-4)}{N^{3/2}} \ket{x_0} + \sum_{x\neq x_0} \frac{(N-4)}{N^{3/2}}  \ket{x} \, .
 \end{align*}
-The scientist who measures the state at this moment would obtain the desired state $\ket{x_0}$ with slightly higher probability than the other individual states.
+The scientist who measures the state at this moment would obtain the desired state $\ket{x_0}$ with a slightly higher probability of $(3N-4)^2/N^3$  than the individual probabilities of $(N-4)^2/N^3$ for the other states.
 
 \section{Parallel MCMC subroutines}
 
