--- a/main.tex
+++ b/main.tex
@@ -210,6 +210,7 @@ We propose a novel quantum computing strategy for \emph{parallel MCMC} algorithm
 \newcommand{\B}{\mathbf{B}}
 \newcommand{\G}{\mathbf{G}}
 \newcommand{\ppi}{\boldsymbol{\pi}}
+\newcommand{\llambda}{\boldsymbol{\lambda}}
 
 Parallel MCMC techniques use multiple proposals to obtain efficiency gains over MCMC algorithms such as Metropolis-Hastings \citep{metropolis1953equation,hastings1970monte} and its progeny that use only a single proposal.  \citet{neal2003markov} develops efficient MCMC transitions for inferring the states of hidden Markov models by proposing a `pool' of candidate states and using dynamic programming to select from among them.  \citet{tjelmeland2004using} considers inference in the general setting and shows how to maintain detailed balance for an arbitrary number (say, $K$) of proposals.  Consider a probability distribution $\pi(\dd\ttheta)$ defined on $\mathbb{R}^D$ that admits a probability density $\pi(\ttheta)$ with respect to the Lebesgue measure, i.e., $\pi(\dd \ttheta)=:\pi(\ttheta)\dd\ttheta$. To generate samples from the target distribution $\pi$, we craft a kernel $P(\ttheta_0,\dd \ttheta)$ that satisfies
 \begin{align}\label{eq:fixes}
@@ -361,9 +362,34 @@ With the rudiments of quantum minimization in hand, we present our quantum paral
 %qp$^2$MCMC uses quantum minimization to limit the number of target evaluations within the generalized acceptance step with the help of the Gumbel-max trick, which transforms the discrete sampling task $\ttheta^{(s+1)} \sim$ Discrete$(\pi_0,\pi_1,\dots,\pi_P)$ into a search problem over a discrete set of real numbers. 
 
 \subsection{Gumbel-max}
+\newcommand{\p}{\mbox{p}}
 
-We need
-
+We wish to randomly select a single element from the set $\{0,1,\dots,P\}$ with probability proportional to the unnormalized probabilities $\ppi^*=(\pi_0^*,\pi_1^*,\dots,\pi_P^*)$.  That is, there exists a $c>0$ such that $\ppi^* = c \ppi$, for $\ppi$ a valid probability vector, but we only have access to $\ppi^*$.  Define $\llambda:= \log \ppi$ and $\llambda^*:= \log \ppi^*=\log\ppi + \log c$,  and assume that $z_0,\dots,z_P\stackrel{iid}{\sim}Gumbel(0,1)$. Then, the probability density function $g(\cdot)$ and cumulative distribution function $G(\cdot)$ for each individual $z_p$ are
+\begin{align}
+g(z_p) = \exp\big(-z_p+ \exp(-z_p)\big) \, , \quad \mbox{and} \quad G(z_p) = \exp \big( -\exp(-z_p) \big)\, .
+\end{align}
+Now, defining the random variables $\alpha^*_p:=\lambda^*_p+z_p$, $\alpha_p:=\lambda_p+z_p$ and  
+\begin{align}
+\hat{p} = \argmax_{p=0,\dots,P}\: \alpha^*_p \, ,
+\end{align}
+we have the result
+\begin{align}
+\mbox{Pr} (\hat{p} = p) = \pi_p \, .
+\end{align}
+In words, the procedure of adding Gumbel noise to unnormalized log-probabilities and taking the index of the maximum produces a random variable that follows the discrete distribution over $\ppi$.  Moving from left to right:
+\begin{align*}
+\mbox{Pr} (\hat{p} = p) &= \mbox{Pr} (\alpha^*_p > \alpha^*_{p'}, \, \forall p' \neq p ) = \mbox{Pr} (\alpha_p > \alpha_{p'}, \, \forall p' \neq p ) \\
+&= \int_{-\infty}^\infty \prod_{p'\neq p} \mbox{Pr} (\alpha_p > \alpha_{p'}| \alpha_p) \p(\alpha_p) \, \dd \alpha_p 
+= \int_{-\infty}^\infty \prod_{p'\neq p} \mbox{Pr} (z_{p'} \leq \alpha_p-\lambda_{p'}| \alpha_p) \p(\alpha_p) \, \dd \alpha_p \\
+&=  \int_{-\infty}^\infty  \prod_{p'\neq p} \exp\big( -\exp(\lambda_{p'}-\alpha_p)\big) \exp\big(-\alpha_p+\lambda_p + \exp(-\alpha_p+\lambda_p) \big) \, \dd \alpha_p \, .
+\end{align*}
+Recalling that $\lambda_p=\log \pi_p$, we exponentiate the logarithms, and the integral becomes
+\begin{align*}
+& \pi_p \int_{-\infty}^\infty  \prod_{p'\neq p} \exp\big( -\pi_{p'}\exp(-\alpha_p)\big) \exp  \big(-\alpha_p + \pi_p\exp(-\alpha_p) \big) \, \dd \alpha_p \\
+&= \pi_p \int_{-\infty}^\infty \exp  (-\alpha_p ) \exp\big( -\sum_{p=0}^P\pi_{p}\exp(-\alpha_p)\big)  \, \dd \alpha_p  \\
+&= \pi_p \int_{-\infty}^\infty \exp  (-\alpha_p ) \exp\big( -\exp(-\alpha_p)\big)  \, \dd \alpha_p  = \pi_p \, ,
+\end{align*}
+where the final equality follows easily from the change of variables $u=\exp(-\alpha_p)$.
 
 \subsection{qp$^2$MCMC}
 
