--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 \usepackage{url}
 \usepackage{amsfonts,amscd,amssymb}
 \usepackage{amsthm,amsmath,natbib}
-\usepackage{algorithm,algorithmicx,algpseudocode}
+\usepackage{algorithm2e}
 \usepackage{bm}
 \usepackage{bbm} %bb font numbers
 \usepackage[table]{xcolor}
@@ -57,6 +57,9 @@ textfont=it]{caption}
 \definecolorset{rgb}{}{}{darkred,0.8,0,0;darkgreen,0,0.5,0;darkblue,0,0,0.5}
 
 %\doublespacing
+
+\SetKwComment{Comment}{/* }{ */}
+\RestyleAlgo{ruled}
 
 \newtheorem{thm}{Theorem}
 \newtheorem{lemma}{Lemma}
@@ -225,6 +228,29 @@ These developments demonstrate the ability of parallel MCMC methods to alleviate
 
 But the real promise and power of parallel MCMC comes from its natural parallelizability \citep{calderhead2014general}.  Contemporary hardware design emphasizes architectures that enable execution of multiple mathematical operations simultaneously. Parallel MCMC techniques stand to leverage technological developments that keep modern computation on track with Moore's Law, which predicts that processing power doubles every two years.  For example, the algorithm of \citet{tjelmeland2004using} generates $K$ conditionally independent proposals and then evaluates the probabilities of Equation \eqref{eq:probs}.  One may parallelize the proposal generation step using parallel pseudorandom number generators (PRNG) such as those advanced in \citet{salmon2011parallel}. The computational complexity of the target evaluations $\pi(\ttheta_j)$ is linear in the number of proposals. This presents a significant burden when $\pi(\cdot)$ is computationally expensive, e.g., in big data settings, but evaluation of the target density over the $K$ proposals is again a naturally parallelizable task.  Moreover, widely available machine learning software such as \textsc{TensorFlow} allows users to easily parallelize both random number generation and target evaluations on general purpose graphics processing units (GPU) \citep{lao2020tfp}. Finally, the pairwise evaluations of the proposal density $q(\cdot,\cdot)$ in Equation \eqref{eq:probs} are $\order{K^2}$, but \citet{massive} demonstrate the natural parallelizability of such pairwise operations, obtaining multiple orders-of-magnitude speedups with contemporary GPUs.
 
+\begin{algorithm}[t!]
+	\caption{Parallel MCMC}\label{alg:pMCMC}
+	\KwData{Initial Markov chain state $\ttheta^{(0)}$; total length of Markov chain $S$; total number of proposals per iteration $P$; routine for evaluating target density $\pi(\cdot)$; routines for drawing random samples from the proposal distribution $Q(\ttheta^{(s)},\cdot)$ and from a $P+1$ discrete distribution $Discrete(\ppi)$ given some probability vector $\ppi=(\pi_0,\dots,\pi_P)$.}
+	\KwResult{A Markov chain $\ttheta^{(1)}, \dots, \ttheta^{(S)}$.}
+	\For{$s \in\{1,\dots,S\}$}{
+		$\sigma_\pi \gets 0$\;
+		\For{$p' \in \{0,\dots,P\}$}{
+			\uIf{$p'=0$}{$\ttheta_{p'} \gets \ttheta^{(s-1)} $}
+			\Else{	$\ttheta_{p'} \gets Q(\ttheta^{(s-1)},\cdot)$\;}
+			\For{$p'' \in \{0,\dots,p'-1,p'+1,\dots,P\}$}{
+				$q_{p'p''} \gets q(\ttheta_{p'},\ttheta_{p''})$\;
+			}
+			$\pi_{p'} \gets \pi(\ttheta_{p'}) \prod_{p''\neq p'} q_{p'p''}$\;
+			$\sigma_\pi \gets \sigma_\pi + \pi_{p'}$\;
+		}
+		$\ppi \gets \ppi / \sigma_\pi$\;
+		$p \gets Discrete(\ppi)$\;
+		$\ttheta^{(s)} \gets \ttheta_p$\;
+	}
+	\Return{$\ttheta^{(1)}, \dots, \ttheta^{(S)}$}\ .
+\end{algorithm}
+
+
 While parallel MCMC algorithms are increasingly well-suited for developing many-core computational architectures, there are trade-offs that need to be taken into account when choosing how to allocate computational resources.  On one end of the spectrum, \citet{gelman1992inference} demonstrate the usefulness of generating, combining and comparing multiple independent Markov chains that target the same distribution, and one may perform this embarrassingly parallel task by assigning the operations for each individual chain to a separate central processing unit (CPU) core or GPU work-group.  In this multi-chain context, simultaneously running multiple parallel MCMC chains could limit resources available for the within-chain parallelization described above.  On the other end of the spectrum, one may find it useful to allocate resources to overcome computational bottlenecks within a single Markov chain that uses a traditional accept-reject step. In big data contexts, \citet{holbrook2021viral,massive,holbrook2021scalable} use multi- and many-core processing to accelerate log-likelihood and log-likelihood gradient calculations within single Metropolis-Hastings and Hamiltonian Monte Carlo \citep{neal2011mcmc} generated chains.  This big data strategy might again limit resources available for parallelization across proposals and target evaluations described above.
 
 \emph{In the presence of these trade-offs, we seek to enjoy the benefits of parallel MCMC while (\textcolor{red}{a}) limiting the total amount of computing necessary and (\textcolor{red}{b})  retaining parallel computing resources for computational bottlenecks such as proposal generations and target evaluations. Here, we assert that established quantum algorithms can help achieve these twin goals.}
@@ -234,6 +260,8 @@ While parallel MCMC algorithms are increasingly well-suited for developing many-
 with gates that are mathematically equivalent to unitary operators \citep{nielsen2002quantum}.  Assuming that engineers overcome the tremendous difficulties involved in building a practical quantum computer (where practicality entails simultaneous use of many quantum gates with little additional noise), 21st century statisticians might have access to quadratic or even exponential speedups for extremely specific statistical tasks.  We are particularly interested in the following four quantum algorithms: quantum search \citep{grover1996fast}, or finding a single 1 amid a collection of 0s, only requires $\order{\sqrt{N}}$ queries, delivering a quadratic speedup over classical search; quantum counting \citep{boyer1998tight}, or finding the number of 1s amid a collection of 0s, only requires $\order{\sqrt{N/M}}$ (where $M$ is the number of 1s) and could be useful for generating p-values within Monte Carlo simulation from a null distribution; to obtain the gradient of a function (e.g., the log-likelihood for Fisher scoring or HMC) with a quantum computer, one only needs to evaluate the function once \citep{jordan2005fast} as opposed to $\order(P)$ times for numerical differentiation, and there is nothing stopping the statistician from using, say, a GPU for this single function call; finally, the HHL algorithm \citep{harrow2009quantum} obtains the scalar value 
 
 =============================
+
+
 
 
 \section{Bare-bones quantum computing}
@@ -317,6 +345,17 @@ In the next section, we review established quantum algorithms that leverage such
 
 \section{Quantum search and quantum minimization}
 
+\begin{algorithm}[t!]
+	\caption{Grover's algorithm for quantum search}\label{alg:grover}
+	\KwData{An oracle gate $\U_f$ taking $\ket{x}\ket{y}$ to $\ket{x}\ket{y\oplus f(x)}$ for a function $f(x):\{0,\dots,N-1\}\rightarrow \{0,1\}$ that satisfies $f(x_0)=1$ for a single $x_0$; $n+1=\log_2(N)+1$ quantum states initialized to $\ket{0}^{\otimes n} \ket{1}$; an integer $R>\pi\sqrt{N}/4$ denoting the number of Grover iterations.}
+	\KwResult{An $n$-bit binary string $x_0$ satisfying $f(x_0)=1$ with error less than $1/N$.}
+	$\H^{\otimes n+1}\ket{0}^{\otimes n}\ket{1} \longrightarrow \ket{h}\ket{-}$; \hspace{11.5em} \Comment{\hspace{0.3em}$\ket{h}=\frac{1}{\sqrt{N}} \sum_{x=0}^{N-1} \ket{x}$.} 
+	$\ket{h}\ket{-} \longrightarrow \G^R \ket{h}\ket{-} \approx \ket{x_0}\ket{-}$;    \hspace{3em}         \Comment{$\G= \Big(2\ket{h}\bra{h}-\I \Big) \Big( \I - 2 \ket{x_0}\bra{x_0} \Big)$}
+	$\ket{x_0} \longrightarrow x_0$\;
+	\Return{$x_0$}\ .
+\end{algorithm}
+
+
 Given a set of $N$ items and a function $f:\{0,1,\dots,N-1\}\rightarrow \{0,1\}$ that evaluates to $1$ for a single element, \citet{grover1996fast} develops an algorithm that uses quantum parallelism to score \emph{quadratic} speedups over its classical counterparts. After only $\order{\sqrt{N}}$ evaluations of $f(\cdot)$, Grover's algorithm returns the $x\in \{0,1,\dots,N-1\}$ satisfying $f(x) =1$ with probability at least $1/2$.  Compare this to $\order{N}$ requirement for the randomized classical algorithm that must evaluate $f(\cdot)$ over at least $N/2$ items to obtain the same probability of detecting $x$.  The algorithm takes the state $\ket{0}^{\otimes N}\ket{1}$ as input and applies Hadamard gates to each of the individual $N+1$ input qubits.  The resulting state is 
 \begin{align*}
 \ket{h}\ket{-}= \left(\frac{1}{\sqrt{N}} \sum_{x=0}^{N-1} \ket{x} \right)  \frac{1}{\sqrt{2}}\left(\ket{0} -\ket{1}\right) =  \frac{1}{\sqrt{N}} \sum_{x=0}^{N-1} \ket{x} \ket{-} \, .
@@ -392,6 +431,33 @@ Recalling that $\lambda_{p'}=\log \pi_{p'}$, we exponentiate the logarithms, and
 &= \pi_p \int_{-\infty}^\infty \exp  (-\alpha_p ) \exp\big( -\exp(-\alpha_p)\big)  \, \dd \alpha_p  = \pi_p \, ,
 \end{align*}
 where the final equality follows easily from the change of variables $u=\exp(-\alpha_p)$.  
+
+
+\begin{algorithm}
+	\caption{The Gumbel-max trick}\label{alg:gm}
+	\KwData{A vector of unnormalized log-probabilities $\llambda^*=\log \ppi +\log c$, for $\ppi$ a discrete probability vector with $P+1$ elements.}
+	\KwResult{A single sample $p \sim$ \emph{Discrete}$(\ppi)$ satisfying $p\in\{0,1,\dots,P\}$.}
+	\For{$p' \in\{0,1,\dots,P\}$}{
+		$z_{p'} \gets Gumbel(0,1)$\;
+		$\alpha^*_{p'} \gets \lambda_{p'}^* + z_{p'}$\;
+	}
+	$p \gets \argmax_{p'=0,\dots,P}\alpha^*_{p'}$\;
+	\Return{p}\ .
+	
+%	$y \gets 1$\;
+%	$X \gets x$\;
+%	$N \gets n$\;
+%	\While{$N \neq 0$}{
+%		\eIf{$N$ is even}{
+%			$X \gets X \times X$\;
+%			$N \gets \frac{N}{2}$ %\Comment*[r]{This is a comment}
+%		}{\If{$N$ is odd}{
+%				$y \gets y \times X$\;
+%				$N \gets N - 1$\;
+%			}
+%		}
+%	}
+\end{algorithm}
 
 \subsection{qp$^2$MCMC}
 
