--- a/refs.bib
+++ b/refs.bib
@@ -109,6 +109,17 @@
 	publisher={IEEE}
 }
 
+@article{boyer1998tight,
+	title={Tight bounds on quantum searching},
+	author={Boyer, Michel and Brassard, Gilles and H{\o}yer, Peter and Tapp, Alain},
+	journal={Fortschritte der Physik: Progress of Physics},
+	volume={46},
+	number={4-5},
+	pages={493--505},
+	year={1998},
+	publisher={Wiley Online Library}
+}
+
 
 @misc{nielsen2002quantum,
 	title={Quantum computation and quantum information},
